added missions and removed sanity code

--- a/src/content/blog/kitchensink.mdx
+++ b/src/content/blog/kitchensink.mdx
@@ -1,5 +1,5 @@
 ---
-draft: true
+draft: false
 title: "Typography Example Post"
 snippet: "Sint sit cillum pariatur eiusmod nulla pariatur ipsum. Sit laborum anim qui mollit tempor pariatur nisi minim dolor. Aliquip et adipisicing sit sit fugiat"
 publishDate: "2022-11-05 15:36"
@@ -187,7 +187,7 @@ import Logo from "@components/ui/button.astro";
 ```
 
 <div>
-  <Button>Click Me</Button>
+  <Button onclick="alert('Dodo time')">Click Me</Button>
 </div>
 
 [[Top]](#top)
